fix app layout issue.

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -5,4 +5,5 @@ div {
   border: 0;
   margin: 0;
   padding: 0;
+  font-family: verdana;
 }
